--- a/Vexis.Client/MVVM/Pages/GamesLibrary.xaml
+++ b/Vexis.Client/MVVM/Pages/GamesLibrary.xaml
@@ -7,6 +7,7 @@
       xmlns:controls="clr-namespace:Vexis.Client.MVVM.Controls"
       xmlns:viewmodel="clr-namespace:Vexis.Client.MVVM.ViewModels"
       mc:Ignorable="d"
+      Loaded="GamesLibrary_OnLoaded"
       Foreground="{DynamicResource MaterialDesignBody}"
       FontSize="15"
       TextOptions.TextFormattingMode="Ideal"
