--- a/Vexis.Client/MVVM/Views/InitializingWindow.xaml
+++ b/Vexis.Client/MVVM/Views/InitializingWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Foreground="{DynamicResource MaterialDesignDarkForeground}"
         Background="{DynamicResource MaterialDesignDarkBackground}"
@@ -12,7 +11,8 @@
         WindowStartupLocation="CenterScreen"
         Title="InitializingWindow" Height="300" Width="500">
     <Grid>
-        <TextBlock Text="{Binding Status, FallbackValue=Initializing...}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <ProgressBar IsIndeterminate="True"  Value="35" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"/>
+        <TextBlock Text="{Binding Status, FallbackValue=Initializing...}" HorizontalAlignment="Center"
+                   VerticalAlignment="Center" />
+        <ProgressBar IsIndeterminate="True" Value="35" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" />
     </Grid>
 </Window>
